--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>AR.js for Landing Page</title>
+  <title>Particle System</title>
 
   <link rel="stylesheet" href="css/common.css">
 
@@ -12,8 +12,23 @@
 </head>
 <body>
   <a-scene vr-mode-ui="enabled: false"
-           embedded>
-    <a-entity camera></a-entity>
+      embedded>
+
+  <a-assets>
+    <img src="assets/logo.jpg" id="logo">
+  </a-assets>
+
+  <a-marker type="pattern"
+      url="markers/dreamport.patt"
+      smooth="true">
+    <a-entity rotation="-90 0 0"
+        id="scene">
+      <a-image src="#logo"></a-image>
+    </a-entity>
+   </a-marker>
+
+  <a-entity camera></a-entity>
+
   </a-scene>
 </body>
 </html>
