--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
   <link rel="stylesheet" href="css/common.css">
 
-  <script src="scripts/aframe.min.js"></script>
-  <script src="scripts/aframe-ar.js"></script>
+  <!-- <script src="scripts/aframe.min.js"></script>
+  <script src="scripts/aframe-ar.js"></script> -->
 </head>
 <body>
-  <a-scene vr-mode-ui="enabled: false"
+  <!-- <a-scene vr-mode-ui="enabled: false"
       embedded>
 
   <a-assets>
@@ -29,6 +29,7 @@
 
   <a-entity camera></a-entity>
 
-  </a-scene>
+  </a-scene> -->
+  <script src="scripts/particle-system.js"></script>
 </body>
 </html>
