--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 
   <link rel="stylesheet" href="css/common.css">
 
-  <!-- <script src="scripts/aframe.min.js"></script>
-  <script src="scripts/aframe-ar.js"></script> -->
+  <script src="scripts/aframe.min.js"></script>
+  <script src="scripts/aframe-ar.js"></script>
+  <script src="scripts/particle-system.js"></script>
 </head>
 <body>
-  <!-- <a-scene vr-mode-ui="enabled: false"
+  <a-scene vr-mode-ui="enabled: false"
       embedded>
 
   <a-assets>
@@ -22,14 +23,14 @@
       url="markers/dreamport.patt"
       smooth="true">
     <a-entity rotation="-90 0 0"
-        id="scene">
+        id="scene"
+        particle>
       <a-image src="#logo"></a-image>
     </a-entity>
    </a-marker>
 
   <a-entity camera></a-entity>
 
-  </a-scene> -->
-  <script src="scripts/particle-system.js"></script>
+  </a-scene>
 </body>
 </html>
