--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       smooth="true">
     <a-entity rotation="-90 0 0"
         id="scene"
-        particle>
+        particle-system="limit: 5; lifetime: 1000; texture: #logo">
       <a-image src="#logo"></a-image>
     </a-entity>
    </a-marker>
